# DICOMautomaton

./: .clang-format  .compile_replit  .gitignore  .gitlab-ci.yml  .lgtm.yaml  .lgtm.yml  .replit  .setup_replit  .travis.yml  Automaton.cc  CMakeLists.txt  CMakePresets.json  ContourFactories.h  DEMONS_IMPLEMENTATION.md  Dose_Meld.cc  Dose_Meld.h  LLM_BUILD_README.md  Makefile  PACS_Ingress.cc  PACS_Refresh.cc  PETCT_Perfusion_Analysis.cc  PKGBUILD  README  README.md  Structs.cc  Whole_Match.cc  Whole_Match.h  YgorImages_Grouping_Purging_Functors.cc  YgorImages_Processing_Compute_per_ROI_Time_Courses.cc  YgorImages_Processing_Compute_per_ROI_Time_Courses.h  YgorImages_Processing_Functor_CT_Perfusion_Clip_Search.h  YgorImages_Processing_Functor_CT_Perfusion_Signal_Diff.cc  YgorImages_Processing_Functor_CT_Reasonable_HU_Window.cc  YgorImages_Processing_Functor_CT_Reasonable_HU_Window.h  YgorImages_Processing_Functor_DBSCAN_Time_Courses.cc  YgorImages_Processing_Functor_DCEMRI_AUC_Map.cc  YgorImages_Processing_Functor_DCEMRI_AUC_Map.h  YgorImages_Processing_Functor_DCEMRI_C_Map.cc  YgorImages_Processing_Functor_DCEMRI_C_Map.h  YgorImages_Processing_Functor_DCEMRI_S0_Map.h  (+31 more)
img_registration/: CMakeLists.txt  GUIDE.md  compile_and_install.sh
img_registration/nsift/: CMakeLists.txt  itkScaleInvariantFeatureImageFilter.h  itkScaleInvariantFeatureImageFilter.txx  testnD.cxx
img_registration/src/: Alignment_ABC.cc  Alignment_ABC.h  CMakeLists.txt  IFGT.h  Run_Def_Reg.cc
py/: .gitignore  README.md  pyproject.toml
registration/src/: Alignment_ABC.h  CMakeLists.txt  CPD_Affine.cc  CPD_Affine.h  CPD_Nonrigid.cc  CPD_Nonrigid.h  CPD_Rigid.cc  CPD_Rigid.h  CPD_Shared.cc  CPD_Shared.h  IFGT.cc  IFGT.h  Run_Def_Reg.cc  plotter.py
scripts/: CMakeLists.txt  Dockerfile_Arch_Linux_SYCL_toolchain.sh  bash_completion.sh  check_markdown_document_url_reachability.sh  check_url_reachability.sh  compare_all_meshes.sh  compile_demons.sh  compile_demons_sycl.sh  compile_sycl.sh  compute_sloccount.sh  convert_colour_map.sh  convert_dict_to_cpp.sh  cross_compile_minimal_musl_static.sh  dump_portable_dcma_bundle.sh  edit_operations_with_tags.sh  enable_swapfile.sh  extract_dcma_version.sh  extract_system_appimage.sh  gather_macos_dylibs.sh  generate_DICOM_dictionary.sh  generate_standard_guides.sh  generate_standard_scripts.sh  get_packages.sh  install_AppImage_runtime_dependencies.sh  list_operation_tags.sh  perform_static_checks.sh  purge_irrelevant_headers.sh  select_files.ps1  shell_completion.sh  validate_scripts.sh  verbatim_replace.cc
src/: 3ddose_File_Loader.cc  3ddose_File_Loader.h  ARAP_Meshes.cc  ARAP_Meshes.h  ARAP_Meshes_Tests.cc  Alignment_Buffer3.h  Alignment_Demons.cc  Alignment_Demons.h  Alignment_Demons_SYCL.cc  Alignment_Demons_SYCL.h  Alignment_Demons_SYCL_Tests.cc  Alignment_Demons_Tests.cc  Alignment_Field.cc  Alignment_Field.h  Alignment_Field_Tests.cc  Alignment_Rigid.cc  Alignment_Rigid.h  Alignment_Rigid_Tests.cc  Alignment_TPSRPM.cc  Alignment_TPSRPM.h  Analysis_Dispatcher.cc  Analysis_Dispatcher.h  Automaton.cc  BED_Conversion.cc  BED_Conversion.h  Boost_Serialization_Archive_Converter.cc  Boost_Serialization_File_Loader.cc  Boost_Serialization_File_Loader.h  CMakeLists.txt  CSG_SDF.cc  CSG_SDF.h  CSV_File_Loader.cc  CSV_File_Loader.h  Colour_Maps.cc  Colour_Maps.h  Common_Boost_Serialization.cc  Common_Boost_Serialization.h  Common_Image_File_Loader.cc  Common_Image_File_Loader.h  Common_Plotting.cc  (+181 more)
src/Analyses/: CMakeLists.txt  CT_Liver_Perfusion.cc  CT_Liver_Perfusion.h  CT_Liver_Perfusion_First_Run.cc  CT_Liver_Perfusion_First_Run.h  CT_Liver_Perfusion_Ortho_Views.cc  CT_Liver_Perfusion_Ortho_Views.h  CT_Liver_Perfusion_Pharmaco.cc  CT_Liver_Perfusion_Pharmaco.h  ContourSimilarity.cc  ContourSimilarity.h  ContouringAides.h  ConvertNaNsToAir.cc  ConvertNaNsToAir.h  DecimatePixels.h  DumpAllOrderedImageMetadataToFile.cc  DumpAllOrderedImageMetadataToFile.h  DumpAnEncompassedPoint.cc  DumpAnEncompassedPoint.h  DumpFilesPartitionedByTime.cc  DumpFilesPartitionedByTime.h  DumpImageMetadataOccurrencesToFile.cc  DumpImageMetadataOccurrencesToFile.h  DumpPixelValuesOverTimeForAnEncompassedPoint.h  DumpROIData.cc  DumpROIData.h  GiveWholeImageArrayABoneWindowLevel.cc  GiveWholeImageArrayABoneWindowLevel.h  GiveWholeImageArrayAHeadAndNeckWindowLevel.cc  GiveWholeImageArrayAHeadAndNeckWindowLevel.h  GiveWholeImageArrayAThoraxWindowLevel.cc  GiveWholeImageArrayAThoraxWindowLevel.h  GiveWholeImageArrayAnAbdominalWindowLevel.cc  GiveWholeImageArrayAnAbdominalWindowLevel.h  ImageRoutineTests.cc  ImageRoutineTests.h  PreFilterEnormousCTValues.h  SFML_Viewer.h  UBC3TMRI_DCE.cc  UBC3TMRI_DCE.h  (+6 more)
src/Challenges/: CMakeLists.txt  Clicker.cc  Clicker.h  Encompass.cc  Encompass.h  FreeSki.cc  FreeSki.h  GuitarFret.cc  GuitarFret.h  Lawn.cc  Lawn.h  MazeExplorer.cc  MazeExplorer.h  MoonRun.cc  MoonRun.h  RotatingCube.cc  RotatingCube.h  Sandwich.cc  Sandwich.h  TacticalStealth.cc  TacticalStealth.h  TowerDefence.cc  TowerDefence.h  Tracks.cc  Tracks.h  Werewolf.cc  Werewolf.h
src/Dialogs/: Selectors.cc  Selectors.h  Text_Query.cc  Text_Query.h  Tray_Notification.cc  Tray_Notification.h
src/Operations/: AccumulateRowsColumns.cc  AccumulateRowsColumns.h  AdjustVerbosity.cc  AdjustVerbosity.h  AlignPoints.cc  AlignPoints.h  AnalyzeDoseVolumeHistograms.cc  AnalyzeDoseVolumeHistograms.h  AnalyzeHistograms.cc  AnalyzeHistograms.h  AnalyzeLightRadFieldCoincidence.cc  AnalyzeLightRadFieldCoincidence.h  AnalyzePicketFence.cc  AnalyzePicketFence.h  AnalyzeRTPlan.cc  AnalyzeRTPlan.h  AnalyzeTPlan.cc  AnalyzeTPlan.h  And.cc  And.h  AnyOf.cc  AnyOf.h  ApplyCalibrationCurve.cc  ApplyCalibrationCurve.h  AutoCropImages.cc  AutoCropImages.h  Average.cc  Average.h  BCCAExtractRadiomicFeatures.cc  BCCAExtractRadiomicFeatures.h  BEDConvert.cc  (+590 more)
sycl/: CMakeLists.txt  GUIDE.md  README.md  compile_and_install.sh  compile_and_run.sh  kParams.txt  plotModelOutputs.py  sanitizeInputData.py
unit_tests/: Alignment_TPSRPM.cc  CMakeLists.txt  Future_Test.cc  Thread_Pool.cc  compile_and_run.sh  compile_threads.sh
(+4220 files in other folders)
